fix: Figures sentences truncated

--- a/assets/css/elements/content.css
+++ b/assets/css/elements/content.css
@@ -22,7 +22,7 @@ figure figcaption {
     font-size: var(--font-size-caption);
     background-color: var(--color-lightgray);
     padding: 20px;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .wp-block-embed {
